<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditLocationActivity">


    <EditText
        android:id="@+id/location_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/please_inter_location_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/location_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/location_name_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/location_description"
        app:layout_constraintStart_toStartOf="@+id/location_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/location_name_edit" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/location_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_back"
        android:onClick="backToList"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/showOnMap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/longitude_data"
        app:layout_constraintTop_toBottomOf="@+id/longitude_data" />

    <Button
        android:id="@+id/showOnMap"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_back"
        android:onClick="showOnMap"
        android:text="show on map"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/longitude_data"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_back"
        android:onClick="updateLocationInfo"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/showOnMap"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/showOnMap" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_back"
        android:onClick="deleteLocation"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/showOnMap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/showOnMap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Latitude"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/location_description"
        app:layout_constraintTop_toBottomOf="@+id/location_description" />

    <TextView
        android:id="@+id/latitude_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Longitude"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/latitude_data"
        app:layout_constraintTop_toBottomOf="@+id/latitude_data" />

    <TextView
        android:id="@+id/longitude_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/latitude_data"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>